[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CompetitiveProgrammingPython"
version = "0.1.0"
description = "Competitive programming problems and solution with tests in Python"
authors = [{ name = "Andrea Fiori" }]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"